# damoville

./: COWORK_SETUP.md  Claude.md  README.md
about me/: about-me.md
projects/denim-trend-analyzer/: .env.example  .gitignore  COWORK_INTEGRATION.md  COWORK_SETUP_COMPLETE.md  HOW_TO_SHARE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  NON_TECHNICAL_GUIDE.md  ONBOARDING.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SCHEDULER.md  SETUP.md  SKILL.md  pyproject.toml  setup.py  setup.sh
projects/denim-trend-analyzer/src/: __init__.py  config.py  data_models.py  denim_analyzer.py  main.py  pinterest_collector.py  prompts.py
projects/denim-trend-analyzer/tests/: __init__.py
