[project]
name = "denim-trend-analyzer"
version = "0.1.0"
description = "AI-powered weekly denim trend analysis and CAD concept generation for B2B retail"
authors = [
    {name = "Damo Ventures", email = "dan@daniel-jenkins.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "google-adk>=0.1.0",
    "langchain-tavily>=0.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "markdown2>=2.4.11",
    "python-dateutil>=2.8.2",
    "pytz>=2024.1",
]

[project.optional-dependencies]
pinterest = [
    "python-pinterest>=1.3.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.0.270",
]

[tool.uv]
python-version = "3.10"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
